styles/styles.css
body {
    background-color: white;
    overflow: hidden;
}

div.center {
    height: 97dvh;
    width: 100dvw;
    display: flex;
    align-items: center;
    justify-content: center;
}

div#imgs {
    width: 166dvw;
    height: 100dvh;
    position: relative;
    display: flex;
    align-items: flex-end;
    left: -33dvw;
    top: -97.5dvh;
    filter: blur(5px) brightness(70%) contrast(80%) saturate(70%);
    transition: transform 5s ease-in-out, filter 5s ease-in-out, width 5s ease-in-out;
}

div.container {
    border:5px solid black;
}

div.column {
    width: 20%;
    transition: transform 5s linear;
    z-index : 0;
}

div.columnR {
    align-self: flex-start;
    width: 20%;
    transition: transform 5s linear;
    z-index : 0;
}

div.columnRhidden {
    align-self: flex-start;
    width: 20%;
    transition: transform 5s linear;
    z-index : 0;
}

img.picture {
    max-height: 100%;
    max-width: 100%;
}

button#enter {
    position: absolute;
    font-size: 130px;
    transition: transform 5s ease-in-out;
    background: none;
    border: none;
    z-index: 5;
    text-shadow: 0px 0px 8px white;
}

button#enter:hover {
    transform: scale(1.5, 3);
}

.trackContainer {
	display: flex;
	height: 70vh;
	cursor: pointer;
	overflow: hidden;
	object-position: 50% center;
	position: relative;
	background: rgb(0,0,0);
	flex-shrink:0;
}

.trackContainer > .image {
	width: 100%;
	height: 100%;
	object-fit: cover;
}

#button-track{
    position: relative;
    z-index : 2;
    display : flex;
    grid-gap: 15px;
    align-self: left;
    user-select: none;
    transition: transform 5s ease-in-out;
}

#trackInside{
    position: absolute;
    top: 10%;
    left: 100vw;
    justify-content: center;
}

